Fixed some slight goofs left behind by testing

--- a/styles/components/options.less
+++ b/styles/components/options.less
@@ -1,5 +1,5 @@
 .mdl-data-table tbody tr:hover{
-  background-color: rgba(0, 25, 50, 0.9);
+  background-color: @blue-dark-hover;
 }
 
 .attendee-lists, th, td {
