--- a/styles/variables.less
+++ b/styles/variables.less
@@ -1,5 +1,5 @@
 @white: #fff;
-@orange: rgb(250, 162, 27);
+@orange: #FAA21B;
 @blue: #0060A3;
 @blue-dark: rgb(0, 25, 50);
 @blue-dark-hover: rgba(0, 25, 50, 0.9);
